buildscript {
    repositories {
        gradlePluginPortal()
    }
}

plugins {
    id 'java'
}

group 'org.sqar.virtualjtc'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

dependencies {
    compileOnly project(':JTCEMUCommon')
    compileOnly project(':JTCEMU')
    compileOnly project(':JTCemuFX')
    compileOnly project(':VirtualJTCCommon')
}

repositories {
    mavenCentral()
}
